2008-08-11  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 547104 – improve type wrapper creation

	* gio/gappinfo.override (_wrap_g_app_info_tp_richcompare)
	(_wrap_g_app_info_tp_repr): New functions.

	* tests/test_gio.py (TestAppInfo.test_eq): New test.

2008-08-11  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 547104 – improve type wrapper creation

	* gobject/pygobject.c (pygobject_register_class): Use new
	pygobject_inherit_slots() to propagate custom slots in normal
	types too.
	(pygobject_inherit_slots): New function, break out of
	pygobject_new_with_interfaces() and rewrite a bit.
	(pygobject_find_slot_for): Add new argument that can forbid
	overriding non-NULL slots.

	* gio/gicon.override (pygio_do_icon_richcompare): Remove, the code
	is now directly in _wrap_g_icon_tp_richcompare().
	(_wrap_g_file_icon_tp_richcompare, _wrap_g_file_icon_tp_hash)
	(_wrap_g_themed_icon_tp_richcompare, _wrap_g_themed_icon_tp_hash):
	Remove, duplicating code in this way is not needed anymore.

2008-08-10  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 546120 – make gio.File more Pythonic

	* gio/gfile.override (_wrap_g_file_tp_richcompare)
	(_wrap_g_file_tp_hash, _wrap_g_file_tp_repr): New functions.

	* tests/test_gio.py (TestFile.test_eq, TestFile.test_hash): New
	tests.

2008-08-10  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 547104 – improve runtime type wrapper creation

	* gobject/pygobject.c (pygobject_new_with_interfaces): Use new
	pygobject_find_slot_for() for `tp_richcompare', `tp_compare`,
	`tp_hash', `tp_iter', `tp_repr', `tp_str' and `tp_print'.
	(pygobject_find_slot_for): New static function.

2008-08-10  Jonathan Matthew  <jonathan@d14n.org>

	Bug 547134 – fix docstring line length

	* gio/gio.defs:
	Fix docstring line lengths so they don't wrap across lines in an 80
	column terminal.

2008-08-10  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gio.defs:
	Add GFile.query_default_handler which was missing from the defs.
